src/objects/DistributionChainBannerJoinTable__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributionSetID__c</fullName>
        <label>DistributionSetID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScenarioID__c</fullName>
        <label>ScenarioID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DELETDistribution ChainBanner Join Table</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distribution ChainBanners Join Table</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>